# rpi_vdr_kodi

./: .gitignore  LICENSE  README.md  kodi.service  kodi_wol_listener.service  kodi_wol_listener_user.service  pyproject.toml  setup.cfg  setup.py  wol_listener.py  wol_listener_new.py  wol_listener_subproc.py
.github/workflows/: python-package.yml
kodi_wol_listener/: __init__.py  __main__.py  async_subprocess.py  dbus_systemd.py  kodi_wol_listener.service  rpi_hdmi.py  wol_listener_subproc.py  wol_receiver.py
pi_system_config/: 99-buitin_disks.rules
rsync_user_service/: rsync.conf  rsync.sh  rsync_user.service
scratch/: dbus_next_kodi.py  dummy.service  dummy_listener.py  kodi_wol_listener.service  wol_listener_dbus.py
tests/: conftest.py  test_async_subprocess.py  test_dbus_systemd.py  test_rpi_hdmi.py  test_wol_listener_subproc.py  test_wol_receiver.py  wol_listener_test.service
vdr_system_konfig/: channels.conf  ddbridge-sleep.service  network-sleep.service  wol.service
vdr_system_konfig/shutdown-hooks/: S90.custom
