[metadata]
name = kodi_wol_listener
version = attr: kodi_wol_listener.VERSION
author = Ralph Scharpf
description = Wait for an incoming WOL pattern on UDP port and run kodi when received
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/frosch01/rpi_vdr_kodi
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Operating System :: POSIX :: Linux
    Intended Audience :: End Users/Desktop
    Topic :: Desktop Environment
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
keywords = kodi, kore, wake-on-lan
license = MIT License
platform = Linux
license_file = LICENSE
Requires-Python: >=3.7

[options]
packages=find:
install_requires =
    coloredlogs>=7.3
    getmac>=0.8.2
    typer>=0.3.2

tests_require =
    pytest>=6.2.1
    pytest-cov>=2.10.1
    pytest-asyncio>=0.14.0
    pytest-mock>=3.4.0
    getmac>=0.8.2

[options.entry_points]
console_scripts =
    kodi_wol_listener=kodi_wol_listener:main

[options.package_data]
kodi_wol_listener = *.service

[options.packages.find]
include=kodi_wol_listener
exclude=tests
